Add support for running the app inside docker
